--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   position: relative;
   margin: 0 auto;  
   width: 500px;
-  height: 800px;
+  height: 100vh;
   background: url('./images/main-bgd.png') center center/cover no-repeat;
   display: flex;
   flex-direction: column;
@@ -38,5 +38,15 @@ img {
   outline: none;
   color: #FFFFFF;
   text-decoration: none;
+  transition: all 0.2s ease;
+}
 
+.choose:hover {
+  transform: translateY(-4px); 
+  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.4);
+}
+
+.choose:focus {
+  transform: translateY(-4px); 
+  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.4);
 }
