--- a/game.css
+++ b/game.css
@@ -69,7 +69,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background: rgba(0,0,0,0.7);
   display: flex;
